; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/cavium/cpt/extr_cptvf_main.c_cptvf_clear_dovf_intr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/cavium/cpt/extr_cptvf_main.c_cptvf_clear_dovf_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpt_vf = type { i32 }
%union.cptx_vqx_misc_int = type { i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cpt_vf*)* @cptvf_clear_dovf_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cptvf_clear_dovf_intr(%struct.cpt_vf* %0) #0 {
  %2 = alloca %struct.cpt_vf*, align 8
  %3 = alloca %union.cptx_vqx_misc_int, align 4
  store %struct.cpt_vf* %0, %struct.cpt_vf** %2, align 8
  %4 = load %struct.cpt_vf*, %struct.cpt_vf** %2, align 8
  %5 = getelementptr inbounds %struct.cpt_vf, %struct.cpt_vf* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @CPTX_VQX_MISC_INT(i32 0, i32 0)
  %8 = call i32 @cpt_read_csr64(i32 %6, i32 %7)
  %9 = bitcast %union.cptx_vqx_misc_int* %3 to i32*
  store i32 %8, i32* %9, align 4
  %10 = bitcast %union.cptx_vqx_misc_int* %3 to %struct.TYPE_2__*
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load %struct.cpt_vf*, %struct.cpt_vf** %2, align 8
  %13 = getelementptr inbounds %struct.cpt_vf, %struct.cpt_vf* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @CPTX_VQX_MISC_INT(i32 0, i32 0)
  %16 = bitcast %union.cptx_vqx_misc_int* %3 to i32*
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @cpt_write_csr64(i32 %14, i32 %15, i32 %17)
  ret void
}

declare dso_local i32 @cpt_read_csr64(i32, i32) #1

declare dso_local i32 @CPTX_VQX_MISC_INT(i32, i32) #1

declare dso_local i32 @cpt_write_csr64(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
